--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,19 @@
     		<version>${org.egovframe.rte.version}</version>
 		</dependency>
 		
+		<!-- redis -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+       
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>6.0.2.RELEASE</version>
+        </dependency>
+		
         <!-- mysql이나 oracle DB 사용시 아래 설정 추가  
         <dependency>
             <groupId>com.googlecode.log4jdbc</groupId>
